# Grace

./: .coveragerc  .gitignore  INFRASTRUCTURE_FIXES.md  README.md  alembic.ini  client.py  fix.patch  grace_patrol.py  main.py  marketing_sim.py  models.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  pytest.ini  railway.json  requirements.txt  simulate_escalation.py  start.sh  test_escalation_local.py  test_rates.py  test_webhook.py
.claude/: launch.json
.github/workflows/: ci.yml
Grace/: .gitignore  INFRASTRUCTURE_FIXES.md  PRODUCTION_READINESS_FIXES.md  README.md  client.py  conftest.py  fix.patch  package-lock.json  pyproject.toml  pyrightconfig.json  pytest.ini  render-start.sh  render.yaml  requirements.txt  simulate_escalation.py  start.sh  test_escalation_local.py  test_webhook.py
Grace/.claude/: launch.json
Grace/.github/workflows/: ci.yml
Grace/alembic/: env.py
Grace/alembic/versions/: 001_add_escalations_table.py  1244eaddc8b2_add_escalations_sentiment.py  bc5180ba6081_add_events_table.py
Grace/app/: auth.py  db.py  db_models.py  main.py  retell_ingest.py  server.py
Grace/app/api/: __init__.py  routes.py
Grace/app/core/: config.py  database.py  events.py  hmac_auth.py  llm.py  security.py  validators.py
Grace/app/routers/: staff.py
Grace/app/services/: make_integration.py  openai_service.py  telegram.py  telegram_bot.py
Grace/app/static/: dashboard.js  index.backup.html  index.html  input.css  output.css
Grace/tests/: conftest.py  e2e_harness.py  test_event_bus.py  test_events_api.py  test_grace_retell_ingest.py  test_integration_rates.py  test_integration_test_endpoints.py  test_make_integration.py  test_retell_diagnostics.py  test_retell_simulate.py  test_retell_ws_disconnect.py  test_telegram_webhook.py  test_webhook_route.py
alembic/: env.py
app/: __init__.py  auth.py  db_models.py  llm.py  main.py  models.py  retell_ingest.py  telegram_bot.py
docs/: debug_retell_payload.md
scripts/: smoke.sh
tests/: conftest.py  test_booking_policy.py  test_flags_off_no_side_effects.py  test_grace_dashboard_api_routes.py  test_grace_retell_ingest.py  test_integration_rates.py  test_integration_webhook.py  test_keyword_routing.py  test_make_trigger_auth.py  test_rates.py  test_retell_diagnostics.py  test_retell_loop_guard.py  test_retell_ws.py  test_retell_ws_protocol.py  test_retell_ws_strict.py  test_root_cache.py  test_root_cache_headers.py  test_route_verification.py  test_telegram_commands.py  test_telegram_webhook.py  test_webhook_security.py
(+25 files in other folders)
