[tool.poetry]
name = "grace"
version = "0.1.0"
description = "Grace Telegram Bot"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.31.0"
alembic = "^1.13.1"
python-telegram-bot = "^21.1.1"
pydantic = "^2.10.6"
pydantic-settings = "^2.1.0"
httpx = "^0.27.0"
tenacity = "^8.3.0"
pytz = "^2025.2"
openai = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-asyncio = ">=0.23.5"
pytest-env = "^1.2.0"
pytest-cov = "^5.0.0"
pylint = "^3.2.2"
flake8 = "^7.0.0"
black = "^24.4.2"
aiosqlite = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pylint.master]
ignore-paths = ["tests"]

[tool.pylint.similarities]
ignore-imports = "yes"
min-similarity-lines = 5
