[tool.poetry]
name = "grace-ai"
version = "0.1.0"
description = "Grace AI Backend"
authors = ["Your Name"]
package-mode = false  # <--- MUST BE EXACTLY THIS to force application mode

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.27"}
asyncpg = "^0.30.0"
httpx = "^0.26.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-env = "^1.1.3"
python-multipart = "^0.0.9"
psycopg2-binary = "^2.9.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"